--- a/examples/node_with_availability_zone.yaml
+++ b/examples/node_with_availability_zone.yaml
@@ -45,6 +45,6 @@ topology_template:
 
   policies:
     - deploy_on_cloudid:
-       type: tosca.policies.Placement
+       type: tosca.policies.indigo.SlaPlacement
        properties: { availability_zone: some_zone }
        targets: [ simple_node ]
