--- a/artifacts/lrms/kubernetes/kube_fe_install.yml
+++ b/artifacts/lrms/kubernetes/kube_fe_install.yml
@@ -11,16 +11,46 @@
   - name: Create auth data file with an admin user
     copy: content='{{kube_admin_token}},{{kube_admin_username}},100,"users,system:masters"' dest=/etc/kubernetes/pki/auth mode=600
 
-  roles:
-  - role: indigo-dc.openvpn
-    openvpn_type_of_node: 'front'
-    openvpn_frontname: 'kubeserver'
+  tasks:
+  - block:
+    - name: Call IndigoVR role as Centralpoint
+      include_role:
+        name: indigo-dc.indigovr
+      vars:
+        INDIGOVR_NODE_TYPE: centralpoint
+        INDIGOVR_MTU: 1400
+
+    - name: Add Master VPN IP in host
+      replace:
+        dest: /etc/hosts
+        regexp: ".*kubeserver.localdomain.*$"
+        replace: "192.168.255.1 kubeserver.localdomain kubeserver"
+
     when: fe_hybrid_cluster
-  - role: indigo-dc.nfs
-    nfs_mode: 'server'
-    nfs_exports: [{path: "/pv", export: "{{ vnode_prefix }}*.localdomain(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}]
-  - role: indigo-dc.kubernetes
-    kube_server: '{{ kube_front_end_ip }}'
-    kube_api_server: '{{ kube_front_end_ip }}'
-    kube_apiserver_options: [{option: "--service-node-port-range", value: "8000-35000"}, {option: "--insecure-port", value: "8080"}, {option: "--token-auth-file", value: "/etc/kubernetes/pki/auth"}]
-    kube_deploy_dashboard: true
+
+  - name: Call NFS role as Server
+    include_role:
+      name: indigo-dc.nfs
+    vars:
+      nfs_mode: 'server'
+      nfs_exports: [{path: "/pv", export: "{{ vnode_prefix }}*.localdomain(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}]
+
+  - name: Call Kubernetes role as front
+    include_role:
+      name: indigo-dc.kubernetes
+    vars:
+      kube_server: '192.168.255.1'
+      kube_api_server: '192.168.255.1'
+      kube_apiserver_options: [{option: "--service-node-port-range", value: "8000-35000"}, {option: "--insecure-port", value: "8080"}, {option: "--token-auth-file", value: "/etc/kubernetes/pki/auth"}]
+      kube_deploy_dashboard: true
+    when: fe_hybrid_cluster
+
+  - name: Call Kubernetes role as front
+    include_role:
+      name: indigo-dc.kubernetes
+    vars:
+      kube_server: '{{ kube_front_end_ip }}'
+      kube_api_server: '{{ kube_front_end_ip }}'
+      kube_apiserver_options: [{option: "--service-node-port-range", value: "8000-35000"}, {option: "--insecure-port", value: "8080"}, {option: "--token-auth-file", value: "/etc/kubernetes/pki/auth"}]
+      kube_deploy_dashboard: true
+    when: not fe_hybrid_cluster
