--- a/examples/generic_app.yaml
+++ b/examples/generic_app.yaml
@@ -1,7 +1,7 @@
   tosca_definitions_version: tosca_simple_yaml_1_0
   
   imports:
-    - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
+    - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/stable/v4.0/custom_types.yaml
   
   description: TOSCA template for deploying an instance for Ophidia using the type SoftwareComponent
   
@@ -29,7 +29,7 @@
         interfaces:
           Standard:
             configure:
-              implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/ophidia/ophidia_install.yml
+              implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/stable/v4.0/artifacts/ophidia/ophidia_install.yml
    
       ophidia_server:
         type: tosca.nodes.indigo.Compute
