--- a/dodas_types/dodas_types.yml
+++ b/dodas_types/dodas_types.yml
@@ -142,6 +142,10 @@ node_types:
       mode:
         type: string
         required: yes
+      node_label:
+        type: string
+        required: no
+        default: unlabelled=true 
     artifacts:
       k3s_config_role:
         file: cloud-pg.ansible_role_k3s
@@ -153,6 +157,7 @@ node_types:
           inputs:
             master_ip: { get_property: [ SELF, master_ip ] }
             mode: { get_property: [ SELF, mode ] }
+            node_label: { get_property: [ SELF, node_label ] }
 
 
   # Legacy: CMS CLUSTER TYPES
