--- a/dodas_types/dodas_artifacts/k3s.yaml
+++ b/dodas_types/dodas_artifacts/k3s.yaml
@@ -3,7 +3,7 @@
   roles:
     - role: 'indigo-dc.nfs'
       nfs_mode: 'server'
-      nfs_exports: [{path: "/root", export: "vnode*.localdomain(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}] 
+      nfs_exports: [{path: "/root", export: "*.localdomain(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}] 
       when: (mode == "server")
     - role: 'indigo-dc.nfs'
       nfs_mode: 'client'
