--- a/dodas_types/dodas_types.yml
+++ b/dodas_types/dodas_types.yml
@@ -52,10 +52,10 @@ node_types:
         type: string
         required: no
         default: ""
-      externalIP:
-        type: string
+      externalParams:
+        type: list
         required: no
-        default: 0
+        default: []
       role_name:
         type: string
         required: no
@@ -77,7 +77,7 @@ node_types:
             inline_options: { get_property: [ SELF, inline_options ] }
             kubeconfig_path: { get_property: [ SELF, kubeconfig_path ] }
             repos: { get_property: [ SELF, repos ] }
-            externalIP: { get_property: [ SELF, externalIP ] }
+            externalParams: { get_property: [ SELF, externalParams ] }
 
 
   tosca.nodes.indigo.KubeCreate:
