--- a/dodas_types/dodas_types.yml
+++ b/dodas_types/dodas_types.yml
@@ -53,9 +53,9 @@ node_types:
         required: no
         default: ""
       externalParams:
-        type: string
+        type: list 
         required: no
-        default: "" 
+        default: [] 
       role_name:
         type: string
         required: no
