--- a/dodas_types/dodas_types.yml
+++ b/dodas_types/dodas_types.yml
@@ -151,10 +151,10 @@ node_types:
       role_name:
         type: string
         required: no
-        default: cloud-pg.ansible_role_k3s
+        default: cloud-pg.k3s
     artifacts:
       k3s_config_role:
-        file: cloud-pg.ansible_role_k3s
+        file: cloud-pg.k3s
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
