--- a/dodas_types/dodas_custom_apps/spark_type.yml
+++ b/dodas_types/dodas_custom_apps/spark_type.yml
@@ -6,8 +6,8 @@ imports:
 
 node_types:
 
-  tosca.nodes.indigo.HelmInstall.Spark:
-    derived_from: tosca.nodes.indigo.HelmInstall
+  tosca.nodes.DODAS.HelmInstall.Spark:
+    derived_from: tosca.nodes.DODAS.HelmInstall
     properties:
       externalIp:
         type: string
