--- a/artifacts/lrms/kubernetes/kube_wn_install.yml
+++ b/artifacts/lrms/kubernetes/kube_wn_install.yml
@@ -14,7 +14,7 @@
     nfs_mode: 'client'
     nfs_client_imports: [{ local: "/pv", remote: "/pv", server_host: "{{ kube_front_end_ip }}" }]
     when: not wn_hybrid_cluster
-  - role: 'cloud-pg.kubernetes'
+  - role: 'dciangot.kubernetes'
     kube_type_of_node: 'wn'
     kube_server: '{{kube_front_end_ip}}'
     kube_api_server: '{{ kube_front_end_ip }}'
