--- a/artifacts/lrms/slurm/slurm_fe_install.yml
+++ b/artifacts/lrms/slurm/slurm_fe_install.yml
@@ -32,6 +32,7 @@
     vars:
       nfs_mode: 'server'
       nfs_exports: [{path: "/home", export: "{{ vnode_prefix }}*.localdomain(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}]
+      rpcbind_ips: "{{ wn_ips | join(' ') }}"
 
   - name: Call SLURM role as front
     include_role:
