--- a/artifacts/lrms/slurm/slurm_wn_install.yml
+++ b/artifacts/lrms/slurm/slurm_wn_install.yml
@@ -40,7 +40,8 @@
         name: indigo-dc.nfs
       vars:
         nfs_mode: 'client'
-        nfs_client_imports: [{ local: "/home", remote: "/home", server_host: "192.168.255.1" }]
+        nfs_client_imports: [{ local: "/home", remote: "/", server_host: "192.168.255.1" }]
+        nfs_only_v4: true
 
     - name: Call SLURM role as WN
       include_role:
@@ -56,7 +57,8 @@
         name: indigo-dc.nfs
       vars:
         nfs_mode: 'client'
-        nfs_client_imports: [{ local: "/home", remote: "/home", server_host: "{{ slurm_front_end_ip }}" }]
+        nfs_client_imports: [{ local: "/home", remote: "/", server_host: "{{ slurm_front_end_ip }}" }]
+        nfs_only_v4: true
 
     - name: Call SLURM role as WN
       include_role:
